--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ buildNumber.properties
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,intellij
+
+input.txt
+output.txt
