--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jazzy</groupId>
+            <artifactId>jazzy</artifactId>
+            <version>0.5.2-rtext-1.4.1-2</version>
+        </dependency>
     </dependencies>
 
 </project>
